--- a/public/style.css
+++ b/public/style.css
@@ -48,3 +48,21 @@ main {
 h1 {
   text-align: center;
 }
+
+img {
+  border-radius: 50%;
+  max-width: 35%;
+}
+
+#single-candy-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
